@@ -207,7 +207,7 @@ Enable textreading mode.  This has the effect that fim will display images scale
 Set scroll steps for internal variable _steps (default is 20%).
 .TP
 .B  --slideshow {number}
-Interruptible slideshow mode; will wait for {number} of seconds (assigned to the _want_sleep_seconds variable after each loading; implemented by executing while(_fileindex<_filelistlen){sleep _want_sleep_seconds; next;} as a first command.
+Interruptible slideshow mode. Wait for {number} of seconds (assigned to the _want_sleep_seconds variable) after each image. Implemented by executing reload; i:fresh=1; while(_fileindex<_filelistlen){sleep _want_sleep_seconds; next;} as a first command. Can be interrupted by : or Esc. The other keys will execute accordingly to their function but will not interrupt the slideshow.
 .TP
 .B  --sanity-check
 Perform a quick sanity check, just after the initialization, and terminate.
