@@ -1,6 +1,6 @@
 # file browsing test
 # in order for this test to terminate, we need some files ..
-if(_filelistlen>1){stdout "at least one file in the list.";quit 1;}
+if(_filelistlen>1){stdout "at least one file in the list.";}
 if(_filelistlen<1){stdout "probable problems with file browser.";quit 1;}
 while(_filelistlen>1){list "pop";}
 stdout _filelistlen;
